# message-extractor

./: .env.example  .gitignore  ALIGN_CALENDAR_SCHEMA.sql  CALENDAR_READY.md  CALENDAR_UPLOAD_INSTRUCTIONS.md  CONTRIBUTING.md  DATABASE_WORKSPACE_SUMMARY.md  INSTALL.md  LICENSE  PROJECT_OVERVIEW.md  QUICKSTART.md  QUICK_START_IMPORT.md  README.md  REORGANIZATION_COMPLETE.md  SETUP_GUIDE.md  SUMMARY.md  SUPABASE_QUICKSTART.md  UPLOAD_STEPS.md  constants.py  create_chat_database.py  example_usage.py  import_whatsapp_to_database.py  install.sh  main.py  pyproject.toml  requirements.txt  run.sh  schema.py  setup.py  test_comprehensive.py
_archived_tools/: whatsapp_extractor_original.py
database/: .gitignore  README.md  database_erd.md  schema_diagram.md  supabase_migration.sql
docs/: ARCHITECTURE.md  CALENDAR_DATABASE_IMPORT.md  CALENDAR_SCHEMA_OPTIMIZATION.md  CHUNKED_PROCESSING.md  DATABASE_README.md  EDGE_CASES.md  EMAIL_IMPORT.md  ERROR_HANDLING_GUIDE.md  GMAIL_EXTRACTOR_FIXES.md  JSON_SCHEMA.md  LLM_EXTRACTION.md  REPOSITORY_TRANSFORMATION.md  REPO_REORGANIZATION_PLAN.md  ROBUSTNESS_CHECKLIST.md  ROBUSTNESS_SYSTEM.md  SQL_SCHEMA.md  SUPABASE_SETUP.md  SUPABASE_TROUBLESHOOTING.md  SUPABASE_UPLOAD.md  VERCEL_SETUP.md  WHATSAPP_IMPORT.md
extractors/: __init__.py  apple_mail_extractor.py  gcal_extractor.py  gmail_extractor.py  google_takeout_contacts_extractor.py  google_takeout_meet_extractor.py  imessage_extractor.py  llm_extractor.py  local_calendar_extractor.py  ocr_extractor.py  whatsapp_extractor.py
scripts/: cleanup_large_groups.py  create_database.py  (+15 more)
(+24 files in other folders)
