[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "message-extractor"
version = "1.0.0"
description = "Extract and unify messages from iMessage, WhatsApp, Gmail, and Google Calendar"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Message Extractor Team"}
]
keywords = ["imessage", "whatsapp", "gmail", "calendar", "message", "extraction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications",
    "Topic :: Utilities",
]
dependencies = [
    "google-auth==2.23.3",
    "google-auth-oauthlib==1.1.0",
    "google-auth-httplib2==0.1.1",
    "google-api-python-client==2.100.0",
    "python-dateutil==2.8.2",
]

[project.scripts]
message-extractor = "main:main"

[tool.setuptools]
packages = ["extractors", "utils"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

